Partial_14Dec2021/force-app/main/default/objects/Beat_Master__c/Beat_Master__c.object-meta.xml
<CustomObject>
    <label>Beat Master</label>
    <nameField>
        <label>Beat Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Beat Master</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>