Partial_14Dec2021/force-app/main/default/objects/Beat_Master__c/fields/Beat_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Beat_Frequency__c</fullName>
    <label>Beat Frequency</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monday Week1</fullName>
            </value>
            <value>
                <fullName>Monday Week2</fullName>
            </value>
            <value>
                <fullName>Monday Week3</fullName>
            </value>
            <value>
                <fullName>Monday Week4</fullName>
            </value>
            <value>
                <fullName>Tuesday Week1</fullName>
            </value>
            <value>
                <fullName>Tuesday Week2</fullName>
            </value>
            <value>
                <fullName>Tuesday Week3</fullName>
            </value>
            <value>
                <fullName>Tuesday Week4</fullName>
            </value>
            <value>
                <fullName>Wednesday Week1</fullName>
            </value>
            <value>
                <fullName>Wednesday Week2</fullName>
            </value>
            <value>
                <fullName>Wednesday Week3</fullName>
            </value>
            <value>
                <fullName>Wednesday Week4</fullName>
            </value>
            <value>
                <fullName>Thursday Week1</fullName>
            </value>
            <value>
                <fullName>Thursday Week2</fullName>
            </value>
            <value>
                <fullName>Thursday Week3</fullName>
            </value>
            <value>
                <fullName>Thursday Week4</fullName>
            </value>
            <value>
                <fullName>Friday Week1</fullName>
            </value>
            <value>
                <fullName>Friday Week2</fullName>
            </value>
            <value>
                <fullName>Friday Week3</fullName>
            </value>
            <value>
                <fullName>Friday Week4</fullName>
            </value>
            <value>
                <fullName>Saturday Week1</fullName>
            </value>
            <value>
                <fullName>Saturday Week2</fullName>
            </value>
            <value>
                <fullName>Saturday Week3</fullName>
            </value>
            <value>
                <fullName>Saturday Week4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>