Partial_14Dec2021/force-app/main/default/objects/Beat_Master__c/fields/Beat_frequency_approval_status__c.field-meta.xml
<CustomField>
    <fullName>Beat_frequency_approval_status__c</fullName>
    <label>Beat Frequency Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>