Partial_14Dec2021/force-app/main/default/objects/Beat_Master__c/fields/NoOfAccounts__c.field-meta.xml
<CustomField>
    <fullName>NoOfAccounts__c</fullName>
    <label>#Accounts</label>
    <summaryForeignKey>Beat_Master_Account__c.Beat_Master__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>